<!--
  ~ Copyright (C) 2017 Elliot Tormey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">app-ui</string>

    <!-- passenger_view -->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nationality">Nationality</string>
    <string name="passenger_number">Passenger no.</string>
    <string name="exiry_date">Expiry date</string>
    <string name="save_these_details_for_later">Save these details for later</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
</resources>
